--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ networks:
   brain-network:
     driver: bridge
 
+x-dns: &dns
+  - 1.1.1.1
+  - 8.8.8.8
+
 volumes:
   ollama_data:
   openwebui_data:
@@ -30,18 +34,18 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${OLLAMA_PORT:-11434}:11434"
     volumes:
       - ollama_data:/root/.ollama
     environment:
-      - HSA_OVERRIDE_GFX_VERSION=11.0.0
-      - HIP_VISIBLE_DEVICES=0
-      - ROCR_VISIBLE_DEVICES=0
       - OLLAMA_HOST=0.0.0.0
       - OLLAMA_ORIGINS=*
       - OLLAMA_NUM_PARALLEL=${OLLAMA_NUM_PARALLEL:-2}
       - OLLAMA_MAX_LOADED_MODELS=${OLLAMA_MAX_LOADED_MODELS:-1}
+    dns: *dns
     devices:
       - /dev/kfd:/dev/kfd
       - /dev/dri:/dev/dri
@@ -67,6 +71,8 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${WEBUI_PORT:-3000}:8080"
     volumes:
@@ -87,6 +93,7 @@ services:
       - ENABLE_RAG_WEB_SEARCH=true
       - RAG_WEB_SEARCH_ENGINE=searxng
       - SEARXNG_QUERY_URL=http://searxng:8080/search?q=<query>
+    dns: *dns
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
@@ -108,6 +115,8 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${ANYTHINGLLM_PORT:-3001}:3001"
     volumes:
@@ -126,6 +135,7 @@ services:
       # Vector DB
       - VECTOR_DB=qdrant
       - QDRANT_ENDPOINT=http://qdrant:6333
+    dns: *dns
     extra_hosts:
       - "host.docker.internal:host-gateway"
     cap_add:
@@ -146,6 +156,8 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${QDRANT_HTTP_PORT:-6333}:6333"
       - "${QDRANT_GRPC_PORT:-6334}:6334"
@@ -154,6 +166,7 @@ services:
     environment:
       - QDRANT__SERVICE__GRPC_PORT=6334
       - QDRANT__SERVICE__HTTP_PORT=6333
+    dns: *dns
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
       interval: 30s
@@ -169,6 +182,8 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${SEARXNG_PORT:-8888}:8080"
     volumes:
@@ -176,6 +191,7 @@ services:
     environment:
       - SEARXNG_BASE_URL=http://localhost:${SEARXNG_PORT:-8888}
       - INSTANCE_NAME=Brain Search
+    dns: *dns
     cap_drop:
       - ALL
     cap_add:
@@ -197,6 +213,8 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${WHISPER_PORT:-10300}:10300"
     volumes:
@@ -210,6 +228,7 @@ services:
       - "1"
       - "--device"
       - "cpu"
+    dns: *dns
     healthcheck:
       test: ["CMD", "nc", "-z", "localhost", "10300"]
       interval: 30s
@@ -226,6 +245,8 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${PIPER_PORT:-10200}:10200"
     volumes:
@@ -233,6 +254,7 @@ services:
     command:
       - "--voice"
       - "en_US-lessac-medium"
+    dns: *dns
     healthcheck:
       test: ["CMD", "nc", "-z", "localhost", "10200"]
       interval: 30s
@@ -249,6 +271,8 @@ services:
     restart: unless-stopped
     networks:
       - brain-network
+    env_file:
+      - ./stack.env
     ports:
       - "${HOMEPAGE_PORT:-80}:3000"
     volumes:
@@ -257,3 +281,4 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
+    dns: *dns
