Add agentic stack and AMD ROCm updates

--- a/unraid-deployment/env-templates/.env.ai-core
+++ b/unraid-deployment/env-templates/.env.ai-core
@@ -4,4 +4,9 @@ TZ=America/New_York
 # Base appdata path
 APPDATA_PATH=/mnt/user/appdata
 
-# (No API keys required for local AI stack by default)
+# Ollama (AMD ROCm)
+OLLAMA_HOST=0.0.0.0
+OLLAMA_ORIGINS=*
+HSA_OVERRIDE_GFX_VERSION=11.0.0
+HIP_VISIBLE_DEVICES=0
+ROCM_VISIBLE_DEVICES=0
