--- a/unraid-deployment/stacks/ai-core.yml
+++ b/unraid-deployment/stacks/ai-core.yml
@@ -1,16 +1,24 @@
 version: "3.8"
 services:
   ollama:
-    image: ollama/ollama:latest
+    image: ollama/ollama:rocm
     container_name: ollama
     restart: unless-stopped
-    runtime: nvidia
     environment:
-      - NVIDIA_VISIBLE_DEVICES=all
+      - OLLAMA_HOST=${OLLAMA_HOST}
+      - OLLAMA_ORIGINS=${OLLAMA_ORIGINS}
+      - HSA_OVERRIDE_GFX_VERSION=${HSA_OVERRIDE_GFX_VERSION}
+      - HIP_VISIBLE_DEVICES=${HIP_VISIBLE_DEVICES}
+      - ROCM_VISIBLE_DEVICES=${ROCM_VISIBLE_DEVICES}
+    devices:
+      - /dev/kfd
+      - /dev/dri
     volumes:
       - ${APPDATA_PATH}/ollama:/root/.ollama
     ports:
       - "11434:11434"
+    networks:
+      - ai_grid
 
   openwebui:
     image: ghcr.io/open-webui/open-webui:main
@@ -29,17 +37,21 @@ services:
     depends_on:
       - ollama
       - qdrant
+    networks:
+      - ai_grid
 
   qdrant:
-    image: qdrant/qdrant:gpu-nvidia-latest
+    image: qdrant/qdrant:latest
     container_name: qdrant
     restart: unless-stopped
-    runtime: nvidia
-    environment:
-      - QDRANT__GPU__INDEXING=1
-      - NVIDIA_VISIBLE_DEVICES=all
     volumes:
       - ${APPDATA_PATH}/qdrant/storage:/qdrant/storage
       - ${APPDATA_PATH}/qdrant/snapshots:/qdrant/snapshots
     ports:
       - "6333:6333"
+    networks:
+      - ai_grid
+
+networks:
+  ai_grid:
+    external: true
