Update Unraid AI and API stacks

--- a/unraid-deployment/env-templates/.env.infrastructure
+++ b/unraid-deployment/env-templates/.env.infrastructure
@@ -12,3 +12,8 @@ LOCAL_SUBNET=192.168.1.0/24
 
 # Homepage dashboard port
 HOMEPAGE_PORT=8008
+
+# Unraid API (My Servers)
+UNRAID_API_URL=https://api.myunraid.net
+UNRAID_API_KEY=
+UNRAID_API_PORT=3005
