--- a/unraid-deployment/configs/homepage-dashboard.yaml
+++ b/unraid-deployment/configs/homepage-dashboard.yaml
@@ -7,6 +7,9 @@ services:
     - name: Portainer
       url: http://192.168.1.9:9000
       icon: mdi:docker
+    - name: Unraid API
+      url: http://192.168.1.9:3005
+      icon: mdi:api
     - name: Uptime Kuma
       url: http://192.168.1.9:3010
       icon: mdi:heart-pulse
