--- a/unraid-deployment/env-templates/.env.ai-core
+++ b/unraid-deployment/env-templates/.env.ai-core
@@ -4,4 +4,11 @@ TZ=America/New_York
 # Base appdata path
 APPDATA_PATH=/mnt/user/appdata
 
-# (No API keys required for local AI stack by default)
+# AMD ROCm (RDNA3) settings for Ollama
+HSA_OVERRIDE_GFX_VERSION=11.0.0
+OLLAMA_NUM_PARALLEL=2
+OLLAMA_MAX_LOADED_MODELS=2
+
+# Optional: external OpenAI-compatible endpoint (vLLM or other local AI)
+LOCAL_AI_OPENAI_BASE_URL=
+LOCAL_AI_OPENAI_API_KEY=
