--- a/unraid-deployment/env-templates/.env.media
+++ b/unraid-deployment/env-templates/.env.media
@@ -10,6 +10,9 @@ MEDIA_PATH=/mnt/user/media
 # Plex claim token (get fresh token from plex.tv/claim, expires in 4 min)
 PLEX_CLAIM=
 
+# Plex hardware transcoding device (AMD/Intel)
+PLEX_DRI_DEVICE=/dev/dri
+
 # Real Debrid API Key (from https://real-debrid.com/apitoken)
 RD_API_KEY=
 
