--- a/unraid-deployment/env-templates/.env.ai-core
+++ b/unraid-deployment/env-templates/.env.ai-core
@@ -4,4 +4,17 @@ TZ=America/New_York
 # Base appdata path
 APPDATA_PATH=/mnt/user/appdata
 
+# Compose profile selection: cpu | nvidia | rocm
+COMPOSE_PROFILES=cpu
+
+# Open WebUI targets
+OLLAMA_BASE_URL=http://ollama:11434
+QDRANT_URI=http://qdrant:6333
+
+# Optional: keep models hot for faster responses
+OLLAMA_KEEP_ALIVE=5m
+
+# AMD ROCm override for RDNA3 (RX 7900 XT)
+HSA_OVERRIDE_GFX_VERSION=11.0.0
+
 # (No API keys required for local AI stack by default)
