--- a/unraid-deployment/stacks/ai-core.yml
+++ b/unraid-deployment/stacks/ai-core.yml
@@ -1,12 +1,45 @@
 version: "3.8"
 services:
   ollama:
-    image: ollama/ollama:latest
+    image: ${OLLAMA_IMAGE:-ollama/ollama:latest}
     container_name: ollama
     restart: unless-stopped
+    profiles:
+      - cpu
+    environment:
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE:-5m}
+    volumes:
+      - ${APPDATA_PATH}/ollama:/root/.ollama
+    ports:
+      - "11434:11434"
+
+  ollama-nvidia:
+    image: ollama/ollama:latest
+    container_name: ollama-nvidia
+    restart: unless-stopped
+    profiles:
+      - nvidia
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE:-5m}
+    volumes:
+      - ${APPDATA_PATH}/ollama:/root/.ollama
+    ports:
+      - "11434:11434"
+
+  ollama-rocm:
+    image: ollama/ollama:rocm
+    container_name: ollama-rocm
+    restart: unless-stopped
+    profiles:
+      - rocm
+    devices:
+      - /dev/kfd:/dev/kfd
+      - /dev/dri:/dev/dri
+    environment:
+      - HSA_OVERRIDE_GFX_VERSION=${HSA_OVERRIDE_GFX_VERSION:-11.0.0}
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE:-5m}
     volumes:
       - ${APPDATA_PATH}/ollama:/root/.ollama
     ports:
@@ -19,21 +52,32 @@ services:
     environment:
       - TZ=${TZ}
       - VECTOR_DB=qdrant
-      - QDRANT_URI=http://qdrant:6333
-      - QDRANT_API_KEY=
-      - OLLAMA_BASE_URL=http://ollama:11434
+      - QDRANT_URI=${QDRANT_URI:-http://qdrant:6333}
+      - QDRANT_API_KEY=${QDRANT_API_KEY:-}
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://ollama:11434}
     volumes:
       - ${APPDATA_PATH}/openwebui:/app/backend/data
     ports:
       - "3000:8080"
-    depends_on:
-      - ollama
-      - qdrant
 
   qdrant:
-    image: qdrant/qdrant:gpu-nvidia-latest
+    image: qdrant/qdrant:latest
     container_name: qdrant
     restart: unless-stopped
+    profiles:
+      - cpu
+    volumes:
+      - ${APPDATA_PATH}/qdrant/storage:/qdrant/storage
+      - ${APPDATA_PATH}/qdrant/snapshots:/qdrant/snapshots
+    ports:
+      - "6333:6333"
+
+  qdrant-nvidia:
+    image: qdrant/qdrant:gpu-nvidia-latest
+    container_name: qdrant-nvidia
+    restart: unless-stopped
+    profiles:
+      - nvidia
     runtime: nvidia
     environment:
       - QDRANT__GPU__INDEXING=1
