Focus Unraid deployment on RTX 4070

--- a/unraid-deployment/env-templates/.env.ai-core
+++ b/unraid-deployment/env-templates/.env.ai-core
@@ -4,7 +4,7 @@ TZ=America/New_York
 # Base appdata path
 APPDATA_PATH=/mnt/user/appdata
 
-# AMD ROCm (optional)
-HSA_OVERRIDE_GFX_VERSION=11.0.0
+# AI profile (cpu or nvidia)
+AI_CORE_PROFILE=nvidia
 
 # (No API keys required for local AI stack by default)
