--- a/unraid-deployment/env-templates/.env.infrastructure
+++ b/unraid-deployment/env-templates/.env.infrastructure
@@ -17,3 +17,5 @@ HOMEPAGE_PORT=8008
 UNRAID_API_URL=https://api.myunraid.net
 UNRAID_API_KEY=
 UNRAID_API_PORT=3006
+# Optional override if GHCR tag changes (manifest unknown)
+UNRAID_API_IMAGE=ghcr.io/unraid/unraid-api:latest
