--- a/unraid-deployment/stacks/media.yml
+++ b/unraid-deployment/stacks/media.yml
@@ -118,7 +118,7 @@ services:
       - "8181:8181"
 
   rdt-client:
-    image: ghcr.io/rogerfar/rdt-client:latest
+    image: docker.io/rogerfar/rdt-client:latest
     container_name: rdt-client
     restart: unless-stopped
     environment:
